--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.10",
     "@react-google-maps/api": "^2.19.2",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
